# adventofcode2024

./: .gitignore  adventofcode2024.cabal  go.mod  readme.md
day1/: solution.go  solution.hs
day1/go/: solution.go
day1/haskell/: Main.hs  day1.cabal
day10/: solution.hs
day11/: solution.hs
day12/: solution.hs
day2/: solution.hs
day2/go/: solution.go
day2/haskell/: Main.hs
day3/: solution.go  solution.hs
day4/: solution.go
day5/: solution.hs
day6/: solution.hs
day7/: solution.hs
day8/: solution.hs
day9/: solution.hs
problem1/: solution.go
