cabal-version:      3.0
name:               adventofcode2024
version:            0.1.0.0
build-type:         Simple

executable day1
    main-is:          solution.hs
    hs-source-dirs:   day1
    build-depends:    base >=4.14 && <5
    default-language: GHC2021

executable day2
    main-is:          solution.hs
    hs-source-dirs:   day2
    build-depends:    base >=4.14 && <5
    default-language: GHC2021

executable day3
    main-is:          solution.hs
    hs-source-dirs:   day3
    build-depends:    base >=4.14 && <5,
                        regex-tdfa ^>= 1.3.2
    default-language: GHC2021