cabal-version:      3.0
name:               adventofcode2024
version:            0.1.0.0
build-type:         Simple

executable day1
    main-is:          solution.hs
    hs-source-dirs:   day1
    build-depends:    base >=4.14 && <5
    default-language: GHC2021

executable day2
    main-is:          solution.hs
    hs-source-dirs:   day2
    build-depends:    base >=4.14 && <5
    default-language: GHC2021

executable day3
    main-is:          solution.hs
    hs-source-dirs:   day3
    build-depends:    base >=4.14 && <5,
                        regex-tdfa ^>= 1.3.2
    default-language: GHC2021

executable day5
    main-is:          solution.hs
    hs-source-dirs:   day5
    build-depends:    base >=4.14 && <5,
                            split,
                            containers
    default-language: GHC2021

executable day6
    main-is:          solution.hs
    hs-source-dirs:   day6
    build-depends:    base >=4.14 && <5,
                            containers
    default-language: GHC2021

executable day7
    main-is:          solution.hs
    hs-source-dirs:   day7
    build-depends:    base >=4.14 && <5
    default-language: GHC2021

executable day8
    main-is:          solution.hs
    hs-source-dirs:   day8
    build-depends:    base >=4.14 && <5,
                        containers
    default-language: GHC2021

executable day9
    main-is:          solution.hs
    hs-source-dirs:   day9
    build-depends:    base >=4.14 && <5,
                        vector
    default-language: GHC2021

executable day10
    main-is:          solution.hs
    hs-source-dirs:   day10
    build-depends:    base >=4.14 && <5,
                        containers
    default-language: GHC2021

executable day11
    main-is:          solution.hs
    hs-source-dirs:   day11
    build-depends:    base >=4.14 && <5,
                        containers
    default-language: GHC2021